test_output.log
   Compiling aws-smithy-types v1.3.2
   Compiling tokio-rustls v0.24.1
   Compiling tokio-rustls v0.26.2
   Compiling ai-ox-macros v0.1.0 (/home/ribelo/projects/ribelo/ai-ox/crates/ai-ox-macros)
   Compiling hyper-rustls v0.27.7
   Compiling tokio-tungstenite v0.26.2
   Compiling hyper-rustls v0.24.2
   Compiling aws-smithy-runtime-api v1.8.1
   Compiling aws-smithy-eventstream v0.60.9
   Compiling aws-smithy-json v0.61.4
   Compiling aws-smithy-query v0.60.7
   Compiling reqwest v0.12.19
   Compiling aws-credential-types v1.2.3
   Compiling aws-smithy-http v0.62.1
   Compiling aws-smithy-observability v0.1.3
   Compiling aws-smithy-http-client v1.0.5
   Compiling aws-types v1.3.7
   Compiling aws-sigv4 v1.3.3
   Compiling ai-ox-common v0.1.0 (/home/ribelo/projects/ribelo/ai-ox/crates/ai-ox-common)
   Compiling anthropic-ox v0.1.0 (/home/ribelo/projects/ribelo/ai-ox/crates/anthropic-ox)
   Compiling groq-ox v0.1.0 (/home/ribelo/projects/ribelo/ai-ox/crates/groq-ox)
   Compiling mistral-ox v0.1.0 (/home/ribelo/projects/ribelo/ai-ox/crates/mistral-ox)
   Compiling gemini-ox v0.1.0 (/home/ribelo/projects/ribelo/ai-ox/crates/gemini-ox)
   Compiling openai-ox v0.1.0 (/home/ribelo/projects/ribelo/ai-ox/crates/openai-ox)
   Compiling aws-smithy-runtime v1.8.3
warning: unused import: `serde::Serialize`
 --> crates/anthropic-ox/src/client.rs:4:5
  |
4 | use serde::Serialize;
  |     ^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error: cannot find macro `json` in this scope
  --> crates/mistral-ox/src/request.rs:80:31
   |
80 |         let response_format = json!({
   |                               ^^^^
   |
help: consider importing this macro
   |
 1 + use serde_json::json;
   |

error[E0405]: cannot find trait `DeserializeOwned` in this scope
   --> crates/mistral-ox/src/request.rs:74:44
    |
 74 |     pub fn response_format<T: JsonSchema + DeserializeOwned>(mut self) -> Self {
    |                                            ^^^^^^^^^^^^^^^^
    |
   ::: /home/ribelo/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/serde-1.0.219/src/de/mod.rs:541:1
    |
541 | pub trait Deserialize<'de>: Sized {
    | --------------------------------- similarly named trait `Deserialize` defined here
    |
help: a trait with a similar name exists
    |
 74 -     pub fn response_format<T: JsonSchema + DeserializeOwned>(mut self) -> Self {
 74 +     pub fn response_format<T: JsonSchema + Deserialize>(mut self) -> Self {
    |
help: consider importing this trait
    |
  1 + use serde::de::DeserializeOwned;
    |

warning: trait `ToolInvoker` is more private than the item `ToolBox::get`
   --> crates/anthropic-ox/src/tool/mod.rs:303:5
    |
303 |     pub fn get(&self, name: &str) -> Option<&Arc<dyn ToolInvoker>> {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ method `ToolBox::get` is reachable at visibility `pub`
    |
note: but trait `ToolInvoker` is only usable at visibility `pub(self)`
   --> crates/anthropic-ox/src/tool/mod.rs:315:1
    |
315 | trait ToolInvoker: Send + Sync {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = note: `#[warn(private_interfaces)]` on by default

warning: method `invoke` is never used
   --> crates/anthropic-ox/src/tool/mod.rs:316:14
    |
315 | trait ToolInvoker: Send + Sync {
    |       ----------- method in this trait
316 |     async fn invoke(&self, input: Value) -> Result<Value, String>;
    |              ^^^^^^
    |
    = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: field `leaky_bucket` is never read
  --> crates/anthropic-ox/src/client.rs:63:16
   |
55 | pub struct Anthropic {
   |            --------- field in this struct
...
63 |     pub(crate) leaky_bucket: Option<Arc<RateLimiter>>,
   |                ^^^^^^^^^^^^
   |
   = note: `Anthropic` has a derived impl for the trait `Clone`, but this is intentionally ignored during dead code analysis

For more information about this error, try `rustc --explain E0405`.
error: could not compile `mistral-ox` (lib) due to 2 previous errors
warning: build failed, waiting for other jobs to finish...
error[E0599]: the method `clone` exists for enum `std::option::Option<RateLimiter>`, but its trait bounds were not satisfied
   --> crates/openai-ox/src/client.rs:107:46
    |
107 |         let rate_limiter = self.rate_limiter.clone();
    |                                              ^^^^^ method cannot be called on `std::option::Option<RateLimiter>` due to unsatisfied trait bounds
    |
   ::: /nix/store/pdw9ls4rlzzilqc1l3n9wfv804189xjs-rust-default-1.91.0-nightly-2025-08-30/lib/rustlib/src/rust/library/core/src/option.rs:593:1
    |
593 | pub enum Option<T> {
    | ------------------ doesn't satisfy `std::option::Option<RateLimiter>: Clone`
    |
   ::: /home/ribelo/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/leaky-bucket-1.1.2/src/lib.rs:523:1
    |
523 | pub struct RateLimiter {
    | ---------------------- doesn't satisfy `RateLimiter: Clone`
    |
    = note: the following trait bounds were not satisfied:
            `RateLimiter: Clone`
            which is required by `std::option::Option<RateLimiter>: Clone`

error[E0282]: type annotations needed
   --> crates/openai-ox/src/client.rs:112:25
    |
112 |                 limiter.acquire_one().await;
    |                         ^^^^^^^^^^^ cannot infer type for type parameter `T` declared on the enum `Option`

error[E0599]: the method `clone` exists for enum `std::option::Option<RateLimiter>`, but its trait bounds were not satisfied
   --> crates/openai-ox/src/client.rs:136:46
    |
136 |         let rate_limiter = self.rate_limiter.clone();
    |                                              ^^^^^ method cannot be called on `std::option::Option<RateLimiter>` due to unsatisfied trait bounds
    |
   ::: /nix/store/pdw9ls4rlzzilqc1l3n9wfv804189xjs-rust-default-1.91.0-nightly-2025-08-30/lib/rustlib/src/rust/library/core/src/option.rs:593:1
    |
593 | pub enum Option<T> {
    | ------------------ doesn't satisfy `std::option::Option<RateLimiter>: Clone`
    |
   ::: /home/ribelo/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/leaky-bucket-1.1.2/src/lib.rs:523:1
    |
523 | pub struct RateLimiter {
    | ---------------------- doesn't satisfy `RateLimiter: Clone`
    |
    = note: the following trait bounds were not satisfied:
            `RateLimiter: Clone`
            which is required by `std::option::Option<RateLimiter>: Clone`

error[E0282]: type annotations needed
   --> crates/openai-ox/src/client.rs:141:25
    |
141 |                 limiter.acquire_one().await;
    |                         ^^^^^^^^^^^ cannot infer type for type parameter `T` declared on the enum `Option`

error[E0277]: the trait bound `RateLimiter: Clone` is not satisfied
  --> crates/openai-ox/src/client.rs:23:5
   |
 7 | #[derive(Debug, Clone, Builder)]
   |                 ----- in this derive macro expansion
...
23 |     rate_limiter: Option<leaky_bucket::RateLimiter>,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Clone` is not implemented for `RateLimiter`
   |
   = note: required for `std::option::Option<RateLimiter>` to implement `Clone`

Some errors have detailed explanations: E0277, E0282, E0599.
For more information about an error, try `rustc --explain E0277`.
error: could not compile `openai-ox` (lib) due to 5 previous errors
warning: struct `GeminiRequestHelper` is never constructed
  --> crates/gemini-ox/src/internal.rs:27:12
   |
27 | pub struct GeminiRequestHelper {
   |            ^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: associated items `new`, `send_generate_content_request`, and `stream_generate_content_request` are never used
   --> crates/gemini-ox/src/internal.rs:33:12
    |
 32 | impl GeminiRequestHelper {
    | ------------------------ associated items in this implementation
 33 |     pub fn new(gemini: &Gemini) -> Result<Self, GeminiRequestError> {
    |            ^^^
...
 53 |     pub async fn send_generate_content_request(
    |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
105 |     pub fn stream_generate_content_request(
    |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: `anthropic-ox` (lib) generated 4 warnings
warning: `gemini-ox` (lib) generated 2 warnings
